--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
 	<version>1.0</version>
 	<packaging>pom</packaging>
 	<name>EasyBundle Examples</name>
-	<description>EasyBundle is simple library which supports internationalization. The library is dedicated for desktop applications.</description>
+	<description>EasyBundle library example projects.</description>
 	<url>http://www.gabrys.biz/projects/EasyBundle/examples/</url>
 
 	<inceptionYear>2013</inceptionYear>
