Move license.txt to LICENSE.md

--- a/pom.xml
+++ b/pom.xml
@@ -20,7 +20,7 @@
     <licenses>
         <license>
             <name>The BSD 3-Clause License</name>
-            <url>https://raw.githubusercontent.com/gabrysbiz/EasyBundle-examples/master/license.txt</url>
+            <url>https://raw.githubusercontent.com/gabrysbiz/EasyBundle-examples/master/LICENSE.md</url>
         </license>
     </licenses>
 
