--- a/multiple-resource-factory/pom.xml
+++ b/multiple-resource-factory/pom.xml
@@ -6,7 +6,7 @@
     <parent>
         <groupId>biz.gabrys</groupId>
         <artifactId>easy-bundle-examples</artifactId>
-        <version>1.2-SNAPSHOT</version>
+        <version>1.2</version>
     </parent>
     <artifactId>multiple-resource-factory</artifactId>
     <name>Multiple Property Resource Factory &amp; Swing</name>
